@@ -1,3 +1,5 @@
+- Fix: Changed Person related entities to allow delete method execution
+
 30.11.0 (14-10-2020)
 - New Feature: Added Health Card Number to Person according #UL-FBA-1051
 
